2009-07-07  Alan McGovern  <amcgovern@novell.com>

	* namescope.cpp: Once a namescope is locked, don't allow names
	  to be registered or unregistered. Fixes the case where the
	  name is changed on a template item.

2009-07-07  Alan McGovern  <amcgovern@novell.com>

	* xaml.h:
	* xaml.cpp:
	* template.cpp: When expanding a template, mark all the
	  children as TemplateItems so they will be able to look up
	  the correct namescope.

	* control.h:
	* control.cpp:
	* dependencyproperty.g.cpp: Add an "IsTemplateItem" attached
	  property.

	* dependencyobject.h:
	* dependencyobject.cpp: Add extra overloads to FindName and
	  FindNameScope so that we can tell whether we are looking up
	  a template name or regular name.

	* namescope.h:
	* namescope.cpp: Add the ability to lock a namescope so it
	can be recognised as a template namescope.

2009-07-07  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Lookup properties on the owner type so attached
	properties get looked up properly when setting them via text ie
	<Canvas.Left>5</Canvas.Left>

2009-07-06  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Ignored elements should buffer their contents
	- Add in Ignored attributes

2009-07-06  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Implement ignorable namespaces.

2009-07-06  Larry Ewing  <lewing@novell.com>

	* multiscaleimage.cpp (ZoomAboutLogicalPoint): make this compile.

2009-07-06  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.cpp, multiscaleimage.h: keep the zoom and pan targets
	so ZoomAbout *= the target's value for zoom, not the current one.

2009-07-06  Jeffrey Stedfast  <fejj@novell.com>

	Fixes drt 249.

	* fonts.cpp (LoadPortableUserInterface): Return the index of the
	Lucida font face.
	(TextFont::Load): If PUI is our first family, keep track of which
	face the Lucida face is and use that as our master. Otherwise use
	the first face.
	(TextFont::UpdateFaceExtents): Use the 'master' face to get the