@@ -1968,7 +1968,7 @@ TextBoxBase::AddFontResource (const char *resource)
 	
 	if (!application || !uri->Parse (resource) || !(path = application->GetResourceAsPath (uri))) {
 		if ((surface = GetSurface ()) && (downloader = surface->CreateDownloader ())) {
-			downloader->Open ("GET", resource, XamlPolicy);
+			downloader->Open ("GET", resource, FontPolicy);
 			AddFontSource (downloader);
 			downloader->unref ();
 		}
