@@ -1,3 +1,11 @@
+2009-07-07  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* downloader.cpp|h: Add a new FontPolicy since it differs from 
+	XamlPolicy (which is otherwise *unused*) and fix policies wrt
+	http://msdn.microsoft.com/en-us/library/cc189008(VS.95).aspx
+	* glyphs.cpp, textblock.cpp, textbox.cpp: Use the new FontPolicy
+	when downloading
+
 2009-07-07  Alan McGovern  <amcgovern@novell.com>
 
 	* namescope.cpp: Once a namescope is locked, don't allow names
